corrige declaracao de strings

--- a/strings.bib
+++ b/strings.bib
@@ -1,8 +1,8 @@
-@string = {proc-ismir2000 = "Proceedings of the 1th International Conference on Music Information Retrieval"}
-@string = {proc-ismir2001 = "Proceedings of the 2th International Conference on Music Information Retrieval"}
-@string = {proc-ismir2002 = "Proceedings of the 3th International Conference on Music Information Retrieval"}
-@string = {proc-ismir2003 = "Proceedings of the 4th International Conference on Music Information Retrieval"}
-@string = {proc-ismir2004 = "Proceedings of the 5th International Conference on Music Information Retrieval"}
-@string = {proc-ismir2005 = "Proceedings of the 6th International Conference on Music Information Retrieval"}
-@string = {proc-ismir2006 = "Proceedings of the 7th International Conference on Music Information Retrieval"}
-@string = {proc-ismir2007 = "Proceedings of the 8th International Conference on Music Information Retrieval"}
+@string {proc-ismir2000 = "Proceedings of the 1th International Conference on Music Information Retrieval"}
+@string {proc-ismir2001 = "Proceedings of the 2th International Conference on Music Information Retrieval"}
+@string {proc-ismir2002 = "Proceedings of the 3th International Conference on Music Information Retrieval"}
+@string {proc-ismir2003 = "Proceedings of the 4th International Conference on Music Information Retrieval"}
+@string {proc-ismir2004 = "Proceedings of the 5th International Conference on Music Information Retrieval"}
+@string {proc-ismir2005 = "Proceedings of the 6th International Conference on Music Information Retrieval"}
+@string {proc-ismir2006 = "Proceedings of the 7th International Conference on Music Information Retrieval"}
+@string {proc-ismir2007 = "Proceedings of the 8th International Conference on Music Information Retrieval"}
