--- a/ismir.bib
+++ b/ismir.bib
@@ -3133,7 +3133,7 @@
 @InProceedings{   gomez.ea:song,
   author        = {Emilia Gomez and P. Herrera},
   title         = {The Song Remains the Same: Identifying Versions of the
-                  Same Piece using Tonal },
+                  Same Piece using Tonal Descriptors},
   booktitle     = proc-ismir2006,
   pages         = {180-185},
   url           = {PAPERS/ISMIR06103_Paper.pdf},
