--- a/programs.bib
+++ b/programs.bib
@@ -1,47 +1,61 @@
-
-@Misc{parker:_lexer_packag,
-  author =    {Michael Parker},
-  title =     {Lexer Package},
-  howpublished = {Available at \url{www.geocities.com/mparker762/clawk.html#lexer}},
-  year		= s.d.
+@Misc{            baudis:git,
+  author        = {Petr Baudis},
+  title         = {Git User's Manual},
+  howpublished  = {Available at
+                  \url{www.kernel.org/pub/software/scm/git/docs/user-manual.html}},
+  year          = s.d.
 }
 
-@Misc{chroboczek:_cl_yacc_manual,
-  author =    {Juliusz Chroboczek},
-  title =     {The CL-Yacc Manual},
-  howpublished = {Available at \url{www.pps.jussieu.fr/~jch/software/cl-yacc/cl-yacc.html}},
-  year		= s.d.
+@Misc{            chroboczek:cl-yacc,
+  author        = {Juliusz Chroboczek},
+  title         = {The CL-Yacc Manual},
+  howpublished  = {Available at
+                  \url{www.pps.jussieu.fr/~jch/software/cl-yacc/cl-yacc.html}}
+                  ,
+  year          = s.d.
 }
 
-@Misc{nissen:fann,
-  author =    {Steffen Nissen},
-  title =     {Fast Artificial Neural Network Library},
-  howpublished = {Available at \url{leenissen.dk/fann/html/files/fann-h.html}},
-  year		= s.d.
+@Misc{            haible.ea:clisp,
+  author        = {Bruno Haible and Michael Stoll and Sam Steingold},
+  title         = {CLISP},
+  howpublished  = {Available at \url{clisp.cons.org}},
+  year          = 2007
 }
 
-@Misc{baudis:_git_users_manual,
-  author =    {Petr Baudis},
-  title =     {Git User's Manual},
-  howpublished = {Available at \url{www.kernel.org/pub/software/scm/git/docs/user-manual.html}},
-  year		= s.d.
+@Misc{            nienhuys.ea:lilypond,
+  author        = {Han-Wen Nienhuys and Jan Nieuwenhuizen},
+  title         = {LilyPond},
+  howpublished  = {Available at \url{www.lilypond.org}}
 }
 
-@Misc{maclachlan06:_cmucl_users_manual,
-  author =    {Robert A. MacLachlan},
-  title =     {CMUCL User's Manual},
-  howpublished = {Available at \url{common-lisp.net/project/cmucl/doc/cmu-user/}},
-  month =     {Nov},
-  year =      2006}
+@Misc{            maclachlan:cmucl,
+  author        = {Robert A. MacLachlan},
+  title         = {CMUCL User's Manual},
+  howpublished  = {Available at
+                  \url{common-lisp.net/project/cmucl/doc/cmu-user/}},
+  month         = {Nov},
+  year          = 2006
+}
 
-@Misc{haible07:_clisp,
-  author =    {Bruno Haible and Michael Stoll and Sam Steingold},
-  title =     {CLISP},
-  howpublished = {Available at \url{clisp.cons.org}},
-  year =      2007}
+@Misc{            nissen:fann,
+  author        = {Steffen Nissen},
+  title         = {Fast Artificial Neural Network Library},
+  howpublished  = {Available at
+                  \url{leenissen.dk/fann/html/files/fann-h.html}},
+  year          = s.d.
+}
 
-@Misc{team07:_sbcl,
-  author =    {SBCL development team},
-  title =     {SBCL 1.0.13.45 User Manual},
-  howpublished = {Available at \url{www.sbcl.org/manual/}},
-  year =      2007}
+@Misc{            parker:lexer,
+  author        = {Michael Parker},
+  title         = {Lexer Package},
+  howpublished  = {Available at
+                  \url{www.geocities.com/mparker762/clawk.html#lexer}},
+  year          = s.d.
+}
+
+@Misc{            team:sbcl,
+  author        = {SBCL development team},
+  title         = {SBCL 1.0.13.45 User Manual},
+  howpublished  = {Available at \url{www.sbcl.org/manual/}},
+  year          = 2007
+}
