--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -82,14 +82,14 @@
 }
 
 @InCollection{    maxwell:expert,
-  author        = {Maxwell, H.J.},
+  author        = {Maxwell, H. John},
   title         = {An Expert System for Harmonizing Analysis of Tonal Music},
   booktitle     = {Understanding Music with AI: Perspectives on Music
                   Cognition},
   pages         = {335-353},
   publisher     = {AAAI Press},
   year          = 1992,
-  editor        = {K.Ebcioglu and O.Laske and M. Balaban}
+  editor        = {K. Ebcioglu and O. Laske and M. Balaban}
 }
 
 @InProceedings{   mouton.ea:numeric,
