alguns nomes por extenso

--- a/coding.bib
+++ b/coding.bib
@@ -1,6 +1,6 @@
 
 @Article{         brinkman:binomial,
-  author        = {Brinkman, A. R.},
+  author        = {Brinkman, Alexander R.},
   title         = {A Binomial Representation of Pitch for Computer Processing
                   of Musical Data},
   journal       = {Music Theory Spectrum},
@@ -10,7 +10,7 @@
 }
 
 @Article{         hewlett:base-40,
-  author        = {Hewlett, W. B.},
+  author        = {Hewlett, Walter B.},
   title         = {A base-40 number-line representation of musical pitch
                   notation},
   journal       = {Musikometrika},
