--- a/dont-have.bib
+++ b/dont-have.bib
@@ -1,5 +1,5 @@
 @Article{         temperley:algorithm,
-  author        = {Temperley, D.},
+  author        = {Temperley, David},
   title         = {An Algorithm for Harmonic Analysis},
   journal       = {Music Perception},
   year          = 1996,
@@ -9,7 +9,7 @@
 }
 
 @Article{         white.ea:superstitious,
-  author        = {A. P. White and W. Z. Liu},
+  author        = {Allan P. White and Wei Zhong Liu},
   title         = {Superstitious learning and induction},
   journal       = {Artificial Intelligence Review},
   year          = 1995,
