--- a/ismir.bib
+++ b/ismir.bib
@@ -1202,7 +1202,7 @@
 }
 
 @InProceedings{   celma.ea:audio,
-  author        = {Oscar Celma and P. Cano and P. Herrera},
+  author        = {Oscar Celma and P. Cano and Perfecto Herrera},
   title         = {An Audio Crawler Focused on Weblogs },
   booktitle     = proc-ismir2006,
   pages         = {},
@@ -3131,7 +3131,7 @@
 }
 
 @InProceedings{   gomez.ea:song,
-  author        = {Emilia Gomez and P. Herrera},
+  author        = {Emilia Gomez and Perfecto Herrera},
   title         = {The Song Remains the Same: Identifying Versions of the
                   Same Piece using Tonal Descriptors},
   booktitle     = proc-ismir2006,
@@ -8109,7 +8109,7 @@
 }
 
 @InProceedings{   ricard.ea:using,
-  author        = {Julien Ricard and P. Herrera},
+  author        = {Julien Ricard and Perfecto Herrera},
   title         = {Using morphological description for generic sound
                   retrieval},
   booktitle     = proc-ismir2003,
