correcao nome de mouton

--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -93,7 +93,7 @@
 }
 
 @InProceedings{   mouton.ea:numeric,
-  author        = {Mouton, R. and Pachet, François},
+  author        = {Mouton, Rémy and Pachet, François},
   title         = {Numeric vs symbolic controversy in automatic analysis of
                   tonal music},
   booktitle     = {IJCAI'95 Workshop on Artificial Intelligence and Music},
