Resolvendo problema de s.d, parte 2

--- a/programs.bib
+++ b/programs.bib
@@ -3,7 +3,7 @@
   title         = {Git User's Manual},
   howpublished  = {Available at
                   \url{www.kernel.org/pub/software/scm/git/docs/user-manual.html}},
-  year          = {s.d}.
+  year          = {s.d.}
 }
 
 @Misc{            chroboczek:cl-yacc,
@@ -12,7 +12,7 @@
   howpublished  = {Available at
                   \url{www.pps.jussieu.fr/~jch/software/cl-yacc/cl-yacc.html}}
                   ,
-  year          = {s.d}.
+  year          = {s.d.}
 }
 
 @Misc{            haible.ea:clisp,
@@ -42,7 +42,7 @@
   title         = {Fast Artificial Neural Network Library},
   howpublished  = {Available at
                   \url{leenissen.dk/fann/html/files/fann-h.html}},
-  year          = {s.d}.
+  year          = {s.d.}
 }
 
 @Misc{            parker:lexer,
@@ -50,7 +50,7 @@
   title         = {Lexer Package},
   howpublished  = {Available at
                   \url{www.geocities.com/mparker762/clawk.html#lexer}},
-  year          = {s.d}.
+  year          = {s.d.}
 }
 
 @Misc{            team:sbcl,
