--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -262,6 +262,20 @@
   year          = 2003
 }
 
+@Article{         taube:automatic,
+  author        = {Heinrich Taube},
+  title         = {Automatic Tonal Analysis: Toward the Implementation of a
+                  Music Theory Workbench},
+  journal       = {Computer Music Journal},
+  volume        = {23},
+  number        = {4},
+  year          = {1999},
+  issn          = {0148-9267},
+  pages         = {18--32},
+  publisher     = {MIT Press},
+  address       = {Cambridge, MA, USA}
+}
+
 @Article{         temperley:bayesian,
   author        = {David Temperley},
   title         = {Bayesian Models of Musical Structure and Cognition},
