--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -8,6 +8,16 @@
   file          = {allan02-harmonizing.pdf}
 }
 
+@Book{            bach:371,
+  author        = {Johann Sebastian Bach},
+  editor        = {Albert Riemenschneider},
+  title         = {371 Harmonized Chorales and 69 Chorale Melodies with
+                  figured bass},
+  publisher     = {G. Schirmer},
+  year          = {1941},
+  address       = {New York},
+}
+
 @PhDThesis{       buteau:topological,
   author        = {Chantal Buteau},
   title         = {A Topological Model of Motivic Structure and Analysis of
