--- a/dont-have.bib
+++ b/dont-have.bib
@@ -17,3 +17,14 @@
   number        = 1,
   url           = {http://www.springerlink.com/content/l764p6v0225v3mx6/}
 }
+
+@Article{         winograd:linguistics,
+  author        = {Terry Winograd},
+  title         = {Linguistics and the computer analysis of tonal harmony},
+  book          = {Machine models of music},
+  year          = {1992},
+  isbn          = {0-262-19319-1},
+  pages         = {113--153},
+  publisher     = {MIT Press},
+  address       = {Cambridge, MA, USA}
+}
