correcao em bibtex de kostka

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -1,8 +1,11 @@
 @Book{            kostka.ea:tonal,
-  author        = {Stefan Kostka and Dorothy Payne},
-  title         = {Tonal Harmony},
+  author        = {Stefan M. Kostka and Dorothy Payne},
+  title         = {Tonal Harmony, with an introduction to
+                  twentieth-century music},
   publisher     = {McGraw-Hill},
-  year          = 2003
+  year          = 2000,
+  address = {Boston},
+  edition = {4th}
 }
 
 @Book{            lerdahl.ea:generative,
