--- a/coding.bib
+++ b/coding.bib
@@ -23,7 +23,7 @@
 @Article{         oliveira:busca,
   author        = {Jamary Oliveira},
   title         = {Em busca de uma codificação},
-  journal       = {Cuadernos Interamericanos De Investigacion en Educacion
+  journal       = {Cuadernos Interamericanos De Investigación en Educación
                   Musical},
   year          = 2001,
   volume        = 1,
