data e mes em licenca gpl

--- a/licenses.bib
+++ b/licenses.bib
@@ -1,5 +1,7 @@
 @Misc{            fsf:gpl,
   author        = {Free Software Foundation},
   title         = {{GNU} General Public License},
-  howpublished  = {Avalilable at \url{www.gnu.org/licenses/gpl-3.0.txt}}
+  howpublished  = {Avalilable at \url{www.gnu.org/licenses/gpl-3.0.txt}},
+  month = {Jun.},
+  year = 2007
 }
