--- a/licenses.bib
+++ b/licenses.bib
@@ -2,6 +2,6 @@
   author        = {Free Software Foundation},
   title         = {{GNU} General Public License},
   howpublished  = {Avalilable at \url{www.gnu.org/licenses/gpl-3.0.txt}},
-  month = {Jun.},
+  month = {Jun},
   year = 2007
 }
