--- a/programs.bib
+++ b/programs.bib
@@ -25,7 +25,9 @@
 @Misc{            nienhuys.ea:lilypond,
   author        = {Han-Wen Nienhuys and Jan Nieuwenhuizen},
   title         = {LilyPond},
-  howpublished  = {Available at \url{www.lilypond.org}}
+  howpublished  = {Available at \url{www.lilypond.org}},
+  month         = {Jan},
+  year          = 2008,
 }
 
 @Misc{            maclachlan:cmucl,
