Artigo sobre knn

--- a/dont-have.bib
+++ b/dont-have.bib
@@ -28,3 +28,14 @@
   publisher     = {MIT Press},
   address       = {Cambridge, MA, USA}
 }
+
+@Article{         fix.ea:important,
+ author         = {E. Fix and J. L. Hodges},
+ title          = {An Important Contribution to Nonparametric Discriminant Analysis and Density Estimation: Commentary on Fix and Hodges (1951) },
+ journal        = {International Statistical Review},
+ volume         = 57,
+ number         = 3,
+ pages          = {233-238},
+ year           = 1989,
+ url            = {http://links.jstor.org/sici?sici=0306-7734(198912)57\%3A3<233\%3AEFAJH\(>2.0.CO\%3B2-8}
+}
