--- a/artifical-inteligence.bib
+++ b/artifical-inteligence.bib
@@ -7,6 +7,14 @@
   year          = "1997"
 }
 
+@Book{            duda.ea:statistical,
+  author        = "Richard O. Duda, Peter E. Hart, David G. Stork",
+  title         = "Pattern Classification",
+  publisher     = "Wiley",
+  edition       = {2nd},
+  year          = "2000"
+}
+
 @Book{            russell.ea:artificial,
   author        = {Stuart Russell and Peter Norvig},
   title         = {Artificial Intelligence: A Modern Approach},
