livros de hindemith

--- a/contorno.bib
+++ b/contorno.bib
@@ -191,6 +191,36 @@ Encoding: UTF-8
   timestamp = {2008.03.04}
 }
 
+@BOOK{hindemith:craft-1,
+  title = {The Craft of musical composition},
+  publisher = {Scott's Söhne},
+  year = {1941},
+  author = {Paul Hindemith},
+  volume = {1: Theory},
+  keywords = {music
+	
+	music composition
+	
+	melodic contour},
+  owner = {marcos},
+  timestamp = {2008.03.05}
+}
+
+@BOOK{hindemith:craft-2,
+  title = {The Craft of musical composition},
+  publisher = {Scott's Söhne},
+  year = {1941},
+  author = {Paul Hindemith},
+  volume = {2: Exercises in two-part writing},
+  keywords = {music
+	
+	music composition
+	
+	melodic contour},
+  owner = {marcos},
+  timestamp = {2008.03.05}
+}
+
 @INBOOK{kliewer:melody,
   chapter = {Melody: Linear aspects of Twentieth-century Music},
   pages = {270--321},
