--- a/dont-have.bib
+++ b/dont-have.bib
@@ -30,7 +30,7 @@
 }
 
 @Article{         fix.ea:important,
- author         = {E. Fix and J. L. Hodges},
+ author         = {Evelyn Fix and Joseph L. Hodges},
  title          = {An Important Contribution to Nonparametric Discriminant Analysis and Density Estimation: Commentary on Fix and Hodges (1951) },
  journal        = {International Statistical Review},
  volume         = 57,
