correcao de links para pdf's

--- a/contorno.bib
+++ b/contorno.bib
@@ -19,7 +19,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/jstor/adams1976mct.pdf},
+  pdf = {/shared/docs/jstor/adams1976mct.pdf},
   publisher = {JSTOR},
   timestamp = {2008.03.04}
 }
@@ -62,7 +62,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/teses/beard2003cmm.pdf},
+  pdf = {/shared/docs/teses/beard2003cmm.pdf},
   timestamp = {2008.03.04}
 }
 
@@ -167,7 +167,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/jstor/friedmann1987rmc.pdf},
+  pdf = {/shared/docs/jstor/friedmann:contour.pdf},
   publisher = {JSTOR},
   timestamp = {2008.03.04}
 }
@@ -187,7 +187,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/jstor/friedmann85:_method_discus_contour.pdf},
+  pdf = {/shared/docs/jstor/friedmann:methodology.pdf},
   timestamp = {2008.03.04}
 }
 
@@ -265,7 +265,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/jstor/marvin87:_relat_music_contour.pdf},
+  pdf = {/shared/docs/jstor/marvin87:_relat_music_contour.pdf},
   timestamp = {2008.03.04}
 }
 
@@ -303,7 +303,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/jstor/morris93:_new_direc_theor_analy_music_contour.pdf},
+  pdf = {/shared/docs/jstor/morris93:_new_direc_theor_analy_music_contour.pdf},
   timestamp = {2008.03.04}
 }
 
@@ -348,7 +348,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/jstor/polansky92:_possib_impos_melod.pdf},
+  pdf = {/shared/docs/jstor/polansky92:_possib_impos_melod.pdf},
   timestamp = {2008.03.04}
 }
 
@@ -371,7 +371,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/home/marcos/profissional/docs/shared-docs/jstor/quinn97:_fuzzy_exten_theor_contour.pdf},
+  pdf = {/shared/docs/jstor/quinn97:_fuzzy_exten_theor_contour.pdf},
   timestamp = {2008.03.04}
 }
 
