correcao em referencia de winograd:linguistics

--- a/harmonic-analysis.bib
+++ b/harmonic-analysis.bib
@@ -345,6 +345,15 @@
   file          = {generating-guitar-scores-from.pdf}
 }
 
+@Article{         winograd:linguistics,
+  author        = {Terry Winograd},
+  title         = {Linguistics and the computer analysis of tonal harmony},
+  journal       = {The Journal of Music Theory},
+  year          = {1968},
+  volume        = 12,
+  pages         = {2--49},
+}
+
 @TechReport{      rgensen.ea:harmonisation,
   author        = {Martin Elmer J\o rgensen and S\o ren Tjagvad Madsen},
   title         = {Harmonisation of Bach chorales},
