correcao de enderecos de pdf's e inclusao de artigo de morris

--- a/contorno.bib
+++ b/contorno.bib
@@ -19,7 +19,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/shared/docs/jstor/adams1976mct.pdf},
+  pdf = {/shared/docs/jstor/adams:melodic.pdf},
   publisher = {JSTOR},
   timestamp = {2008.03.04}
 }
@@ -265,7 +265,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/shared/docs/jstor/marvin87:_relat_music_contour.pdf},
+  pdf = {/shared/docs/jstor/marvin.ea:relating.pdf},
   timestamp = {2008.03.04}
 }
 
@@ -303,8 +303,20 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/shared/docs/jstor/morris93:_new_direc_theor_analy_music_contour.pdf},
+  pdf = {/shared/docs/jstor/morris:directions.pdf},
   timestamp = {2008.03.04}
+}
+
+@ARTICLE{morris:similarity,
+  author = {Robert D. Morris},
+  title = {A Similarity Index for Pitch-Class Sets},
+  journal = {Journal of Music Theory},
+  year = {1990},
+  volume = {34},
+  pages = {445--60},
+  annote = {http://links.jstor.org/sici?sici=0031-6016(197923%2F198022)18%3A1%2F2%3C445%3AASIFPS%3E2.0.CO%3B2-B},
+  keywords = {music similarity},
+  pdf = {/shared/docs/jstor/morris:silimarity.pdf}
 }
 
 @BOOK{morris:composition,
@@ -348,7 +360,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/shared/docs/jstor/polansky92:_possib_impos_melod.pdf},
+  pdf = {/shared/docs/jstor/polansky.ea:possible.pdf},
   timestamp = {2008.03.04}
 }
 
@@ -371,7 +383,7 @@ Encoding: UTF-8
 	
 	melodic contour},
   owner = {marcos},
-  pdf = {/shared/docs/jstor/quinn97:_fuzzy_exten_theor_contour.pdf},
+  pdf = {/shared/docs/jstor/quinn:fuzzy.pdf},
   timestamp = {2008.03.04}
 }
 
