nova entrada - marvin

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -413,6 +413,19 @@ Encoding: UTF-8
   timestamp = {2008.03.04}
 }
 
+@INBOOK{marvin.ea:generalization,
+  chapter = {A Generalization of Contour Theory to Diverse Musical Spaces: Analytical
+	Applications to the Music of Dallapiccola and Stockhausen},
+  pages = {135--71},
+  publisher = {University of Rochester Press},
+  year = {1995},
+  editor = {Elizabeth West Marvin and Richard Hermann},
+  address = {Rochester, NY},
+  booktitle = {Concert Music, Rock, and Jazz since},
+  owner = {marcos},
+  timestamp = {2008.03.13}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
