--- a/artifical-inteligence.bib
+++ b/artifical-inteligence.bib
@@ -8,7 +8,7 @@
 }
 
 @Book{            duda.ea:statistical,
-  author        = "Richard O. Duda, Peter E. Hart, David G. Stork",
+  author        = "Richard O. Duda and Peter E. Hart and David G. Stork",
   title         = "Pattern Classification",
   publisher     = "Wiley",
   edition       = {2nd},
