mais livros de composicao

--- a/composition.bib
+++ b/composition.bib
@@ -27,6 +27,22 @@
   author	= {David Cope}
 }
 
+@Book{		  hindemith:craft-1,
+  title		= {The Craft of musical composition},
+  publisher	= {Scott's Söhne},
+  year		= {1941},
+  author	= {Paul Hindemith},
+  volume	= {1: Theory}
+}
+
+@Book{		  hindemith:craft-2,
+  title		= {The Craft of musical composition},
+  publisher	= {Scott's Söhne},
+  year		= {1941},
+  author	= {Paul Hindemith},
+  volume	= {2: Exercises in two-part writing}
+}
+
 @Book{		  kostka:materials,
   title		= {Materials and Techniques of Twentieth-Century Music},
   publisher	= {Prentice Hall},
@@ -47,6 +63,31 @@
   author	= {Joseph Schillinger},
   address	= {New York},
   cdd		= {781.61 S334}
+}
+
+@Book{		  schonberg:fundamentals,
+  title		= {Fundamentals of musical composition},
+  publisher	= {Faber and Faber Ltd},
+  year		= {1967},
+  editor	= {Gerald Strange and Leonard Stein},
+  author	= {Arnold Schönberg},
+  address	= {London}
+}
+
+@Book{		  toch:shaping,
+  title		= {The Shaping Forces in Music: An Inquiry Into the Nature of
+		  Harmony, Melody, Counterpoint, Form},
+  publisher	= {Dover Publications},
+  year		= {1977},
+  author	= {Ernst Toch}
+}
+
+@Book{		  toch:shaping.1948,
+  title		= {The Shaping Forces in Music},
+  publisher	= {Criterion Music Corp},
+  year		= {1948},
+  author	= {Ernst Toch},
+  address	= {New York}
 }
 
 @Book{		  wittlich.ea:aspects,
