mais livros de harmonia (tonal e atonal)

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -1,17 +1,127 @@
-@Book{            kostka.ea:tonal,
-  author        = {Stefan M. Kostka and Dorothy Payne},
-  title         = {Tonal Harmony, with an introduction to
-                  twentieth-century music},
-  publisher     = {McGraw-Hill},
-  year          = 2000,
-  address = {Boston},
-  edition = {4th}
+
+@Book{		  aldwell.ea:harmony,
+  title		= {Harmony and voice leading},
+  publisher	= {Harcourt Brace Jovanovich},
+  year		= {1989},
+  author	= {Edward Aldwell and Carl Schachter},
+  pages		= {xiv, 624},
+  address	= {San Diego},
+  annote	= {Edward Aldwell, Carl Schachter.
+		  
+		  ill.; 25 cm.}
 }
 
-@Book{            lerdahl.ea:generative,
-  author        = {Lerdahl, F. and R. Jackendoff},
-  title         = {A Generative Theory of Tonal Music},
-  publisher     = {MIT Press},
-  year          = 1983,
-  address       = {Cambridge}
+@Book{		  forte:structure,
+  title		= {The Structure of Atonal Music},
+  publisher	= {Yale University Press},
+  year		= {1973},
+  author	= {Allen Forte},
+  address	= {New Haven},
+  isbn		= {300016107}
+}
+
+@Book{		  forte:tonal,
+  title		= {Tonal harmony in concept and practice},
+  publisher	= {Holt Rinehart and Winston},
+  year		= {1979},
+  author	= {Allen Forte},
+  pages		= {564},
+  address	= {New York},
+  annote	= {Allen Forte.
+		  
+		  25 cm.
+		  
+		  Includes indexes.}
+}
+
+@Book{		  gauldin:harmonic,
+  title		= {Harmonic practice in tonal music},
+  publisher	= {W.W. Norton},
+  year		= {1997},
+  author	= {Robert Gauldin},
+  pages		= {xxii, 680},
+  address	= {New York},
+  annote	= {http://purl.dlib.indiana.edu/iudl/variations/sound/AHA3291}
+		  
+}
+
+@Book{		  koechlin:traite,
+  title		= {Traité de l'Harmonie},
+  publisher	= {Max Eschig},
+  year		= {1946},
+  author	= {Charles Koechlin},
+  volume	= {3},
+  address	= {Paris}
+}
+
+@Book{		  kostka.ea:tonal,
+  author	= {Stefan M. Kostka and Dorothy Payne},
+  title		= {Tonal Harmony, with an introduction to twentieth-century
+		  music},
+  publisher	= {McGraw-Hill},
+  year		= 2000,
+  address	= {Boston},
+  edition	= {4th}
+}
+
+@Book{		  kostka.ea:tonal-1989,
+  title		= {Tonal harmony, with an introduction to twentieth-century
+		  music},
+  publisher	= {A.A. Knopf},
+  year		= {1989},
+  author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
+  pages		= {xxiii, 632},
+  address	= {New York},
+  annote	= {Stefan Kostka, Dorothy Payne; consulting editor in music,
+		  Allan W. Schindler.
+		  
+		  music; 25 cm.
+		  
+		  Includes indexes.}
+}
+
+@Book{		  kostka.ea:workbook,
+  title		= {Workbook for Tonal harmony, with an introduction to
+		  twentieth-century music},
+  publisher	= {McGraw-Hill College},
+  year		= {2000},
+  author	= {Stefan M. Kostka and Dorothy Payne},
+  address	= {Boston},
+  annote	= {Stefan Kostka, Dorothy Payne.
+		  
+		  iv, 311 p.: music; 28 cm. + 2 sound discs (digital; 4 3/4
+		  in.)}
+}
+
+@Book{		  lerdahl.ea:generative,
+  author	= {Lerdahl, F. and R. Jackendoff},
+  title		= {A Generative Theory of Tonal Music},
+  publisher	= {MIT Press},
+  year		= 1983,
+  address	= {Cambridge}
+}
+
+@Book{		  piston:harmony,
+  title		= {Harmony},
+  publisher	= {Victon Gollancz Ltd},
+  year		= {1959},
+  author	= {Walter Piston},
+  address	= {London},
+  pdf		= {/shared/books/piston:harmony.pdf}
+}
+
+@Book{		  rahn:basic,
+  title		= {Basic Atonal Theory},
+  publisher	= {Longman},
+  year		= {1980},
+  author	= {Rahn, J.},
+  keywords	= {set theory}
+}
+
+@Book{		  wedge:applied,
+  title		= {Applied Harmony: A Text-book},
+  publisher	= {G. Schirmer, Inc.},
+  year		= {1930},
+  author	= {George A. Wedge},
+  address	= {New York}
 }
