mais livros: straus

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -118,6 +118,15 @@
   keywords	= {set theory}
 }
 
+@Book{		  straus:introduction,
+  title		= {Introduction to post-tonal theory},
+  publisher	= {Prentice Hall},
+  year		= {1990},
+  author	= {Joseph Nathan Straus},
+  address	= {Englewood Cliffs, N.J.},
+  isbn		= {136866921}
+}
+
 @Book{		  wedge:applied,
   title		= {Applied Harmony: A Text-book},
   publisher	= {G. Schirmer, Inc.},
