mais referencias de orquestracao

--- a/orchestration.bib
+++ b/orchestration.bib
@@ -25,6 +25,17 @@
   edition	= {2. ed.}
 }
 
+@InCollection{	  brown:orchestration,
+  author	= {Howard Mayer Brown},
+  title		= {Orchestration},
+  booktitle	= {The New Grove Dictionary of Music and Musicians},
+  publisher	= {Macmillan Publishers},
+  year		= {1980},
+  editor	= {Stanley Sadie},
+  volume	= {13},
+  address	= {London}
+}
+
 @Book{		  carse:history,
   title		= {The History of Orchestration},
   publisher	= {Dover},
@@ -122,6 +133,18 @@
   keywords	= {music
 		  
 		  orchestration}
+}
+
+@InCollection{	  kreitner.ea:instrumentation,
+  author	= {Kenneth Kreitner and Mary Térey-Smith and Jack Westrup
+		  and D. Kern Holoman and G.W. Hopkins and Paul Griffiths and
+		  Jon Alan Conrad},
+  title		= {Instrumentation and Orchestration},
+  booktitle	= {Grove Music},
+  publisher	= {Oxford University Press},
+  year		= {2002},
+  editor	= {Macy, Laura Williams},
+  url		= {/shared/docs/grove/files-1/music.20404.html}
 }
 
 @Book{		  piston:orchestration,
