limpeza em bib e edicoes mais novas de livros

--- a/composition.bib
+++ b/composition.bib
@@ -50,10 +50,17 @@
   author	= {Stefan M. Kostka},
   address	= {Upper Saddle River, New Jersey},
   edition	= {2 ed.},
-  isbn		= {1-13-924077-2},
-  keywords	= {music
-		  
-		  composition}
+  isbn		= {1-13-924077-2}
+}
+
+@Book{		  kostka:materials-2005,
+  title		= {Materials and Techniques of Twentieth-Century Music},
+  publisher	= {Prentice Hall},
+  year		= {2005},
+  author	= {Stefan M. Kostka},
+  address	= {Upper Saddle River, New Jersey},
+  edition	= {3 ed.},
+  isbn		= {978-0131930803}
 }
 
 @Book{		  schillinger:schillinger,
@@ -106,13 +113,5 @@
   year		= {1979},
   author	= {Charles Wuorinen},
   pages		= {xi, 168},
-  address	= {New York},
-  annote	= {Charles Wuorinen.
-		  
-		  music; 26 cm.
-		  
-		  Includes index.},
-  keywords	= {Composition (Music)
-		  
-		  Twelve-tone system.}
+  address	= {New York}
 }
