--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -4,11 +4,7 @@
   publisher	= {Harcourt Brace Jovanovich},
   year		= {1989},
   author	= {Edward Aldwell and Carl Schachter},
-  pages		= {xiv, 624},
-  address	= {San Diego},
-  annote	= {Edward Aldwell, Carl Schachter.
-		  
-		  ill.; 25 cm.}
+  address	= {San Diego}
 }
 
 @Book{		  forte:structure,
@@ -25,13 +21,7 @@
   publisher	= {Holt Rinehart and Winston},
   year		= {1979},
   author	= {Allen Forte},
-  pages		= {564},
-  address	= {New York},
-  annote	= {Allen Forte.
-		  
-		  25 cm.
-		  
-		  Includes indexes.}
+  address	= {New York}
 }
 
 @Book{		  gauldin:harmonic,
@@ -43,6 +33,15 @@
   address	= {New York},
   annote	= {http://purl.dlib.indiana.edu/iudl/variations/sound/AHA3291}
 		  
+}
+
+@Book{		  gauldin:harmonic-2005,
+  title		= {Harmonic practice in tonal music},
+  publisher	= {W.W. Norton},
+  year		= {2005},
+  author	= {Robert Gauldin},
+  address	= {New York},
+  edition	= {2th}
 }
 
 @Book{		  koechlin:traite,
@@ -71,13 +70,7 @@
   year		= {1989},
   author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
   pages		= {xxiii, 632},
-  address	= {New York},
-  annote	= {Stefan Kostka, Dorothy Payne; consulting editor in music,
-		  Allan W. Schindler.
-		  
-		  music; 25 cm.
-		  
-		  Includes indexes.}
+  address	= {New York}
 }
 
 @Book{		  kostka.ea:workbook,
@@ -86,11 +79,7 @@
   publisher	= {McGraw-Hill College},
   year		= {2000},
   author	= {Stefan M. Kostka and Dorothy Payne},
-  address	= {Boston},
-  annote	= {Stefan Kostka, Dorothy Payne.
-		  
-		  iv, 311 p.: music; 28 cm. + 2 sound discs (digital; 4 3/4
-		  in.)}
+  address	= {Boston}
 }
 
 @Book{		  lerdahl.ea:generative,
@@ -114,8 +103,7 @@
   title		= {Basic Atonal Theory},
   publisher	= {Longman},
   year		= {1980},
-  author	= {Rahn, J.},
-  keywords	= {set theory}
+  author	= {Rahn, J.}
 }
 
 @Book{		  straus:introduction,
