--- a/orchestration.bib
+++ b/orchestration.bib
@@ -9,6 +9,16 @@
   isbn		= {393958078}
 }
 
+@Book{		  adler:study-2002,
+  title		= {The Study of Orchestration},
+  publisher	= {W.W. Norton \& Company},
+  year		= {2002},
+  author	= {Samuel Adler},
+  address	= {New York},
+  edition	= {3. ed.},
+  isbn		= {978-0393975727}
+}
+
 @Book{		  berlioz.ea:treatise,
   title		= {{Treatise on Instrumentation}},
   publisher	= {Dover Publications},
@@ -100,11 +110,6 @@
   author	= {Kent Wheeler Kennan and Donald Grantham},
   pages		= {xii, 403},
   address	= {Englewood Cliffs, N.J.},
-  annote	= {Kent Kennan, Donald Grantham.
-		  
-		  ill.; 24 cm.
-		  
-		  Includes index.},
   isbn		= {139003088}
 }
 
@@ -115,12 +120,19 @@
   author	= {Kent Wheeler Kennan and Donald Grantham},
   pages		= {411},
   address	= {Upper Saddle River, N.J.},
-  annote	= {Kent Kennan, Donald Grantham.
-		  
-		  ill.; 24 cm.
-		  
-		  Includes index.},
+  edition	= {5. ed},
   isbn		= {0-13-466327-6}
+}
+
+@Book{		  kennan.ea:technique-2002,
+  title		= {The technique of orchestration},
+  publisher	= {Prentice-Hall},
+  year		= {2002},
+  author	= {Kent Wheeler Kennan and Donald Grantham},
+  pages		= {411},
+  address	= {Upper Saddle River, N.J.},
+  edition	= {6. ed},
+  isbn		= {978-0130771612}
 }
 
 @Book{		  koechlin:orchestration,
@@ -129,10 +141,7 @@
   year		= {1956},
   author	= {Charles Koechlin},
   volume	= {1-4},
-  address	= {Paris},
-  keywords	= {music
-		  
-		  orchestration}
+  address	= {Paris}
 }
 
 @InCollection{	  kreitner.ea:instrumentation,
