--- a/composition.bib
+++ b/composition.bib
@@ -63,6 +63,14 @@
   isbn		= {978-0131930803}
 }
 
+@Book{		  lester:analytic,
+  title		= {Analytic approaches to twentieth-century music},
+  author	= {Joel Lester},
+  year		= {1989},
+  publisher	= {W.W. Norton \& Company},
+  isbn		= {978-0393957624}
+}
+
 @Book{		  schillinger:schillinger,
   title		= {{The Schillinger System of Musical Composition}},
   publisher	= {Carl Fischer, Inc},
