--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -69,8 +69,17 @@
   publisher	= {A.A. Knopf},
   year		= {1989},
   author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
-  pages		= {xxiii, 632},
   address	= {New York}
+}
+
+@Book{		  kostka.ea:tonal-2003,
+  title		= {Tonal harmony, with an introduction to twentieth-century
+		  music},
+  publisher	= {McGraw-Hill},
+  year		= {2003},
+  author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
+  address	= {Boston},
+  edition	= {5th}
 }
 
 @Book{		  kostka.ea:workbook,
