melhorando formatacao e nova entrada

--- a/music-history.bib
+++ b/music-history.bib
@@ -983,6 +983,13 @@
   cdd           = {780.908 S185}
 }
 
+@BOOK{            schwartz.ea:music,
+  title         = {Music Since 1945: Issues, Materials, and Literature},
+  publisher     = {Schirmer Books},
+  year          = {1993},
+  author        = {Eliott Schwartz and Daniel Godfrey}
+}
+
 @Book{            ulrich.ea:history,
   title         = {A history of music and musical style},
   publisher     = {Harcourt Brace \& World},
