--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -1,133 +1,141 @@
 
-@Book{		  aldwell.ea:harmony,
-  title		= {Harmony and voice leading},
-  publisher	= {Harcourt Brace Jovanovich},
-  year		= {1989},
-  author	= {Edward Aldwell and Carl Schachter},
-  address	= {San Diego}
+@Book{            aldwell.ea:harmony,
+  title         = {Harmony and voice leading},
+  publisher     = {Harcourt Brace Jovanovich},
+  year          = {1989},
+  author        = {Edward Aldwell and Carl Schachter},
+  address       = {San Diego}
 }
 
-@Book{		  forte:structure,
-  title		= {The Structure of Atonal Music},
-  publisher	= {Yale University Press},
-  year		= {1973},
-  author	= {Allen Forte},
-  address	= {New Haven},
-  isbn		= {300016107}
+@Book{            forte:structure,
+  title         = {The Structure of Atonal Music},
+  publisher     = {Yale University Press},
+  year          = {1973},
+  author        = {Allen Forte},
+  address       = {New Haven},
+  isbn          = {300016107}
 }
 
-@Book{		  forte:tonal,
-  title		= {Tonal harmony in concept and practice},
-  publisher	= {Holt Rinehart and Winston},
-  year		= {1979},
-  author	= {Allen Forte},
-  address	= {New York}
+@Book{            forte:tonal,
+  title         = {Tonal harmony in concept and practice},
+  publisher     = {Holt Rinehart and Winston},
+  year          = {1979},
+  author        = {Allen Forte},
+  address       = {New York}
 }
 
-@Book{		  gauldin:harmonic,
-  title		= {Harmonic practice in tonal music},
-  publisher	= {W.W. Norton},
-  year		= {1997},
-  author	= {Robert Gauldin},
-  pages		= {xxii, 680},
-  address	= {New York},
-  annote	= {http://purl.dlib.indiana.edu/iudl/variations/sound/AHA3291}
-		  
+@Book{            gauldin:harmonic,
+  title         = {Harmonic practice in tonal music},
+  publisher     = {W.W. Norton},
+  year          = {1997},
+  author        = {Robert Gauldin},
+  pages         = {xxii, 680},
+  address       = {New York},
+  annote        = {http://purl.dlib.indiana.edu/iudl/variations/sound/AHA3291}
+                  
 }
 
-@Book{		  gauldin:harmonic-2005,
-  title		= {Harmonic practice in tonal music},
-  publisher	= {W.W. Norton},
-  year		= {2005},
-  author	= {Robert Gauldin},
-  address	= {New York},
-  edition	= {2th}
+@Book{            gauldin:harmonic*1,
+  title         = {Harmonic practice in tonal music},
+  publisher     = {W.W. Norton},
+  year          = {2005},
+  author        = {Robert Gauldin},
+  address       = {New York},
+  edition       = {2th}
 }
 
-@Book{		  koechlin:traite,
-  title		= {Traité de l'Harmonie},
-  publisher	= {Max Eschig},
-  year		= {1946},
-  author	= {Charles Koechlin},
-  volume	= {3},
-  address	= {Paris}
+@Book{            green:form,
+  title         = {Form in tonal music: an introduction to analysis},
+  publisher     = {Holt Rinehart and Winston},
+  year          = {1979},
+  author        = {Douglass M. Green},
+  address       = {New York}
 }
 
-@Book{		  kostka.ea:tonal,
-  author	= {Stefan M. Kostka and Dorothy Payne},
-  title		= {Tonal Harmony, with an introduction to twentieth-century
-		  music},
-  publisher	= {McGraw-Hill},
-  year		= 2000,
-  address	= {Boston},
-  edition	= {4th}
+@Book{            koechlin:traite,
+  title         = {Traité de l'Harmonie},
+  publisher     = {Max Eschig},
+  year          = {1946},
+  author        = {Charles Koechlin},
+  volume        = {3},
+  address       = {Paris}
 }
 
-@Book{		  kostka.ea:tonal-1989,
-  title		= {Tonal harmony, with an introduction to twentieth-century
-		  music},
-  publisher	= {A.A. Knopf},
-  year		= {1989},
-  author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
-  address	= {New York}
+@Book{            kostka.ea:tonal,
+  author        = {Stefan M. Kostka and Dorothy Payne},
+  title         = {Tonal Harmony, with an introduction to twentieth-century
+                  music},
+  publisher     = {McGraw-Hill},
+  year          = 2000,
+  address       = {Boston},
+  edition       = {4th}
 }
 
-@Book{		  kostka.ea:tonal-2003,
-  title		= {Tonal harmony, with an introduction to twentieth-century
-		  music},
-  publisher	= {McGraw-Hill},
-  year		= {2003},
-  author	= {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
-  address	= {Boston},
-  edition	= {5th}
+@Book{            kostka.ea:workbook,
+  title         = {Workbook for Tonal harmony, with an introduction to
+                  twentieth-century music},
+  publisher     = {McGraw-Hill College},
+  year          = {2000},
+  author        = {Stefan M. Kostka and Dorothy Payne},
+  address       = {Boston}
 }
 
-@Book{		  kostka.ea:workbook,
-  title		= {Workbook for Tonal harmony, with an introduction to
-		  twentieth-century music},
-  publisher	= {McGraw-Hill College},
-  year		= {2000},
-  author	= {Stefan M. Kostka and Dorothy Payne},
-  address	= {Boston}
+@Book{            kostka.ea:tonal*1,
+  title         = {Tonal harmony, with an introduction to twentieth-century
+                  music},
+  publisher     = {A.A. Knopf},
+  year          = {1989},
+  author        = {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
+  address       = {New York}
 }
 
-@Book{		  lerdahl.ea:generative,
-  author	= {Lerdahl, F. and R. Jackendoff},
-  title		= {A Generative Theory of Tonal Music},
-  publisher	= {MIT Press},
-  year		= 1983,
-  address	= {Cambridge}
+@Book{            kostka.ea:tonal*2,
+  title         = {Tonal harmony, with an introduction to twentieth-century
+                  music},
+  publisher     = {McGraw-Hill},
+  year          = {2003},
+  author        = {Stefan M. Kostka and Dorothy Payne and Allan Schindler},
+  address       = {Boston},
+  edition       = {5th}
 }
 
-@Book{		  piston:harmony,
-  title		= {Harmony},
-  publisher	= {Victon Gollancz Ltd},
-  year		= {1959},
-  author	= {Walter Piston},
-  address	= {London},
-  pdf		= {/shared/books/piston:harmony.pdf}
+@Book{            lerdahl.ea:generative,
+  author        = {Lerdahl, F. and R. Jackendoff},
+  title         = {A Generative Theory of Tonal Music},
+  publisher     = {MIT Press},
+  year          = 1983,
+  address       = {Cambridge}
 }
 
-@Book{		  rahn:basic,
-  title		= {Basic Atonal Theory},
-  publisher	= {Longman},
-  year		= {1980},
-  author	= {Rahn, J.}
+@Book{            piston:harmony,
+  title         = {Harmony},
+  publisher     = {Victon Gollancz Ltd},
+  year          = {1959},
+  author        = {Walter Piston},
+  address       = {London},
+  pdf           = {/shared/books/piston:harmony.pdf}
 }
 
-@Book{		  straus:introduction,
-  title		= {Introduction to post-tonal theory},
-  publisher	= {Prentice Hall},
-  year		= {1990},
-  author	= {Joseph Nathan Straus},
-  address	= {Englewood Cliffs, N.J.},
-  isbn		= {136866921}
+@Book{            rahn:basic,
+  title         = {Basic Atonal Theory},
+  publisher     = {Longman},
+  year          = {1980},
+  author        = {Rahn, J.}
 }
 
-@Book{		  wedge:applied,
-  title		= {Applied Harmony: A Text-book},
-  publisher	= {G. Schirmer, Inc.},
-  year		= {1930},
-  author	= {George A. Wedge},
-  address	= {New York}
+@Book{            straus:introduction,
+  title         = {Introduction to post-tonal theory},
+  publisher     = {Prentice Hall},
+  year          = {1990},
+  author        = {Joseph Nathan Straus},
+  address       = {Englewood Cliffs, N.J.},
+  isbn          = {136866921}
+}
+
+@Book{            wedge:applied,
+  title         = {Applied Harmony: A Text-book},
+  publisher     = {G. Schirmer, Inc.},
+  year          = {1930},
+  author        = {George A. Wedge},
+  address       = {New York}
 }
