--- a/music-dictionary.bib
+++ b/music-dictionary.bib
@@ -67,3 +67,11 @@
   annote        = {Disponível em \url{http://www.grovemusic.com/}},
   publisher     = {Macmillan}
 }
+
+@Book{            michels:atlas,
+  title         = {Atlas de música},
+  publisher     = {Alianza},
+  year          = {1982},
+  author        = {Ulrich Michels},
+  address       = {Madrid}
+}
