--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -61,6 +61,16 @@
   address       = {Paris}
 }
 
+@Book{            kohs:musical,
+  title         = {Musical Form: Studies in Analysis and Synthesis},
+  publisher     = {Houghton Wifflin},
+  year          = {1976},
+  author        = {Ellis B Kohs},
+  address       = {Boston},
+  owner         = {marcos},
+  timestamp     = {2007.03.22}
+}
+
 @Book{            kostka.ea:tonal,
   author        = {Stefan M. Kostka and Dorothy Payne},
   title         = {Tonal Harmony, with an introduction to twentieth-century
