movendo bach chorales riemenschneider de lugar

--- a/music-scores.bib
+++ b/music-scores.bib
@@ -1,3 +1,12 @@
+@Book{            bach:371,
+  author        = {Johann Sebastian Bach},
+  editor        = {Albert Riemenschneider},
+  title         = {371 Harmonized Chorales and 69 Chorale Melodies with
+                  figured bass},
+  publisher     = {G. Schirmer},
+  year          = {1941},
+  address       = {New York},
+}
 
 @Book{            beethoven:complete,
   title         = {Complete String Quartets},
