livro morris:figured

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -117,6 +117,16 @@
   address       = {Cambridge}
 }
 
+@Book{          morris:figured,
+  author        = {Reginald Owen Morris},
+  title         = {Figured Harmony at the Keyboard},
+  publisher     = {Oxford University Press},
+  year          = {1933},
+  volume        = {I - Part I},
+  address       = {London},
+  isbn          = {193214717}
+}
+
 @Book{            piston:harmony,
   title         = {Harmony},
   publisher     = {Victon Gollancz Ltd},
@@ -149,3 +159,4 @@
   author        = {George A. Wedge},
   address       = {New York}
 }
+
