novas entradas e arrumacao

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -117,7 +117,7 @@
   address       = {Cambridge}
 }
 
-@Book{          morris:figured,
+@Book{            morris:figured,
   author        = {Reginald Owen Morris},
   title         = {Figured Harmony at the Keyboard},
   publisher     = {Oxford University Press},
@@ -126,6 +126,14 @@
   address       = {London},
   isbn          = {193214717}
 }
+
+@Book{            motte:armonia,
+ author         = {{Diether de la} Motte},
+ title          = {Armonia},
+ publisher      = {Editorial Labor},
+ year           = 1989,
+ address        = {Barcelona},
+ note           = {Trad. Luis Romano Haces}}
 
 @Book{            piston:harmony,
   title         = {Harmony},
@@ -159,4 +167,12 @@
   author        = {George A. Wedge},
   address       = {New York}
 }
+
+@Book{            zamacois:tratado,
+ author         = {Joaquin Zamacois},
+ title          = {Tratado de Armonia},
+ publisher      = {Editorial Labor},
+ year           = 1948,
+ volume         = 3,
+ address        = {Barcelona}}
 
