--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -151,8 +151,7 @@
   volume        = {29},
   pages         = {223--48},
   number        = {2},
-  annote        = {http://links.jstor.org/sici?sici=0022-2909(198523)29%3A2%3C223%3AAMFTDO%3E2.0.CO%3B2-E}
-                  ,
+  annote        = {http://links.jstor.org/sici?sici=0022-2909(198523)29%3A2%3C223%3AAMFTDO%3E2.0.CO%3B2-E},
   doi           = {10.2307/843614},
   pdf           = {/shared/docs/jstor/friedmann:methodology.pdf}
 }
