--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -135,8 +135,7 @@
   volume        = {31},
   pages         = {268--274},
   number        = {2},
-  annote        = {http://links.jstor.org/sici?sici=0022-2909(198723)31%3A2%3C268%3AARMCTC%3E2.0.CO%3B2-8}
-                  ,
+  annote        = {http://links.jstor.org/sici?sici=0022-2909(198723)31%3A2%3C268%3AARMCTC%3E2.0.CO%3B2-8},
   doi           = {10.2307/843710},
   pdf           = {/shared/docs/jstor/friedmann:contour.pdf},
   publisher     = {JSTOR}
